add favicon tag

--- a/src/layouts/cv.astro
+++ b/src/layouts/cv.astro
@@ -7,6 +7,7 @@ const { frontmatter } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
     <title>{frontmatter.title}</title>
   </head>
   <body>
